--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Nanum+Gothic:wght@400;700&family=Noto+Sans:wght@300;400;700&family=Open+Sans:wght@300;400;500;600;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@400;500;600;700&family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcolo del prezzo del biglietto del treno
     </title>
 </head>
 <body>
+    <div class="box">
+        <h1 id="title">Prezzo del biglietto</h1>
+        <h2>Il costo del biglietto è<span id="total-price"></span></h2>
+    </div>
     
     <script src="js/script.js"></script>
 </body>
